--- a/index.html
+++ b/index.html
@@ -200,32 +200,32 @@
             <div class="popup-section">
                 <div class="popup-left">
                     <h3>Roue 1</h3>
-                    <label for="gift1_1">Cadeau 1 :</label><input type="text" id="gift1_1" value="Arriver à 10h demain 🛌"><br>
-                    <label for="gift2_1">Cadeau 2 :</label><input type="text" id="gift2_1" value="Cadeau 2"><br>
-                    <label for="gift3_1">Cadeau 3 :</label><input type="text" id="gift3_1" value="Cadeau 3"><br>
-                    <label for="gift4_1">Cadeau 4 :</label><input type="text" id="gift4_1" value="Cadeau 4"><br>
-                    <label for="gift5_1">Cadeau 5 :</label><input type="text" id="gift5_1" value="Cadeau 5"><br>
-                    <label for="gift6_1">Cadeau 6 :</label><input type="text" id="gift6_1" value="Cadeau 6"><br>
+                    <label for="gift1_1">Cadeau 1 :</label><input type="text" id="gift1_1" value="10h demain 🛌"><br>
+                    <label for="gift2_1">Cadeau 2 :</label><input type="text" id="gift2_1" value="Pins"><br>
+                    <label for="gift3_1">Cadeau 3 :</label><input type="text" id="gift3_1" value="Partir 16h30"><br>
+                    <label for="gift4_1">Cadeau 4 :</label><input type="text" id="gift4_1" value="Lunch Anais"><br>
+                    <label for="gift5_1">Cadeau 5 :</label><input type="text" id="gift5_1" value=" 30€ "><br>
+                    <label for="gift6_1">Cadeau 6 :</label><input type="text" id="gift6_1" value="Jus d'orange par Hugo"><br>
                 </div>
                 <div class="popup-right">
                     <h3>Roue 2</h3>
-                    <label for="gift1_2">Cadeau 1 :</label><input type="text" id="gift1_2" value="Cadeau 1"><br>
-                    <label for="gift2_2">Cadeau 2 :</label><input type="text" id="gift2_2" value="Cadeau 2"><br>
-                    <label for="gift3_2">Cadeau 3 :</label><input type="text" id="gift3_2" value="Cadeau 3"><br>
-                    <label for="gift4_2">Cadeau 4 :</label><input type="text" id="gift4_2" value="Cadeau 4"><br>
-                    <label for="gift5_2">Cadeau 5 :</label><input type="text" id="gift5_2" value="Cadeau 5"><br>
-                    <label for="gift6_2">Cadeau 6 :</label><input type="text" id="gift6_2" value="Cadeau 6"><br>
+                    <label for="gift1_2">Cadeau 1 :</label><input type="text" id="gift1_2" value="Airpods"><br>
+                    <label for="gift2_2">Cadeau 2 :</label><input type="text" id="gift2_2" value="Train 150€"><br>
+                    <label for="gift3_2">Cadeau 3 :</label><input type="text" id="gift3_2" value="Dinner 2"><br>
+                    <label for="gift4_2">Cadeau 4 :</label><input type="text" id="gift4_2" value="Place concert"><br>
+                    <label for="gift5_2">Cadeau 5 :</label><input type="text" id="gift5_2" value="Place Disney"><br>
+                    <label for="gift6_2">Cadeau 6 :</label><input type="text" id="gift6_2" value="2 Place Ciné"><br>
                 </div>
             </div>
             <div class="popup-section">
                 <div class="popup-left">
                     <h3>Roue 3</h3>
-                    <label for="gift1_3">Cadeau 1 :</label><input type="text" id="gift1_3" value="Cadeau 1"><br>
-                    <label for="gift2_3">Cadeau 2 :</label><input type="text" id="gift2_3" value="Cadeau 2"><br>
-                    <label for="gift3_3">Cadeau 3 :</label><input type="text" id="gift3_3" value="Cadeau 3"><br>
-                    <label for="gift4_3">Cadeau 4 :</label><input type="text" id="gift4_3" value="Cadeau 4"><br>
-                    <label for="gift5_3">Cadeau 5 :</label><input type="text" id="gift5_3" value="Cadeau 5"><br>
-                    <label for="gift6_3">Cadeau 6 :</label><input type="text" id="gift6_3" value="Cadeau 6"><br>
+                    <label for="gift1_3">Cadeau 1 :</label><input type="text" id="gift1_3" value="Mini Video Proj"><br>
+                    <label for="gift2_3">Cadeau 2 :</label><input type="text" id="gift2_3" value="Iphone 600€"><br>
+                    <label for="gift3_3">Cadeau 3 :</label><input type="text" id="gift3_3" value="Billet d'avion 500€"><br>
+                    <label for="gift4_3">Cadeau 4 :</label><input type="text" id="gift4_3" value="Dommage"><br>
+                    <label for="gift5_3">Cadeau 5 :</label><input type="text" id="gift5_3" value="Apple Watch"><br>
+                    <label for="gift6_3">Cadeau 6 :</label><input type="text" id="gift6_3" value="Dyson Aspirateur"><br>
                 </div>
             </div>
             <button id="saveButton">Sauvegarder</button>
