--- a/index.html
+++ b/index.html
@@ -206,6 +206,12 @@
                     <label for="gift4_1">Cadeau 4 :</label><input type="text" id="gift4_1" value="Lunch Anais"><br>
                     <label for="gift5_1">Cadeau 5 :</label><input type="text" id="gift5_1" value=" 30€ "><br>
                     <label for="gift6_1">Cadeau 6 :</label><input type="text" id="gift6_1" value="Jus d'orange par Hugo"><br>
+                    <label for="gift7_1">Cadeau 7 :</label><input type="text" id="gift7_1" value="Lunch Anais"><br>
+                    <label for="gift8_1">Cadeau 8 :</label><input type="text" id="gift8_1" value=" 30€ "><br>
+                    <label for="gift9_1">Cadeau 9 :</label><input type="text" id="gift9_1" value="Jus d'orange par Hugo"><br>
+                    <label for="gift10_1">Cadeau 10 :</label><input type="text" id="gift10_1" value="Lunch Anais"><br>
+                    <label for="gift11_1">Cadeau 11 :</label><input type="text" id="gift11_1" value=" 30€ "><br>
+                    <label for="gift12_1">Cadeau 12 :</label><input type="text" id="gift12_1" value="Jus d'orange par Hugo"><br>
                 </div>
                 <div class="popup-right">
                     <h3>Roue 2</h3>
@@ -298,6 +304,12 @@
                 document.getElementById("gift4_1").value,
                 document.getElementById("gift5_1").value,
                 document.getElementById("gift6_1").value
+                document.getElementById("gift7_1").value,
+                document.getElementById("gift8_1").value,
+                document.getElementById("gift9_1").value,
+                document.getElementById("gift10_1").value,
+                document.getElementById("gift11_1").value,
+                document.getElementById("gift12_1").value
             ];
             wheels[1].gifts = [
                 document.getElementById("gift1_2").value,
